<resources>
    <string name="app_name">AndroidNetworking_lv0</string>
    <string name="dev_name">Nguyễn Đức Hải</string>
    <string name="class_name">LT14303</string>
    <string name="subject_name">Android Networking</string>
    <string name="lab1">Lab 1</string>
    <string name="lab2">Lab 2</string>
    <string name="lab3">Lab 3</string>
    <string name="lab4">Lab 4</string>
    <string name="lab5">Lab 5</string>
    <string name="lab6">Lab 6</string>
    <string name="lab7">Lab 7</string>
    <string name="lab8">Lab 8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="string_click_to_load">Click to load</string>
    <string name="string_getting_json_title">Get json title</string>
    <string name="string_getting_json_message">Get json message</string>
    <string name="string_some_thing_wrong">Some thing wrong</string>
    <string name="string_internet_connection_not_available">Internet connection not available</string>

</resources>